--- a/Customers/Base.lproj/Main.storyboard
+++ b/Customers/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G18a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,52 +18,88 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cwm-h1-aP7">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="KOz-DV-nDn">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Customers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zsv-k8-Vpz">
-                                            <rect key="frame" x="107" y="17.5" width="162" height="25"/>
-                                            <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="21"/>
-                                            <color key="textColor" red="0.98823529409999999" green="0.98823529409999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" red="0.36078431372549019" green="0.41568627450980389" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstItem="Zsv-k8-Vpz" firstAttribute="centerY" secondItem="KOz-DV-nDn" secondAttribute="centerY" id="Fnt-sI-4dc"/>
-                                        <constraint firstItem="Zsv-k8-Vpz" firstAttribute="centerX" secondItem="KOz-DV-nDn" secondAttribute="centerX" id="Opj-xp-rZv"/>
-                                    </constraints>
-                                </view>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomerCell" id="CtO-ev-ZfL">
-                                        <rect key="frame" x="0.0" y="88" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CtO-ev-ZfL" id="Cld-Kx-VCU">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="8uT-0G-ofW">
+                                <rect key="frame" x="5.5" y="190.5" width="309" height="187"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Thk-e3-yhe">
+                                        <rect key="frame" x="0.0" y="0.0" width="309" height="58.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total amount spent by Napoleon Batz" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdE-nz-Pet">
+                                                <rect key="frame" x="12" y="0.0" width="285.5" height="18.5"/>
+                                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="totalPrice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uFg-HQ-gpU">
+                                                <rect key="frame" x="119" y="38.5" width="71" height="20"/>
+                                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="ENV-24-4gv">
+                                        <rect key="frame" x="0.0" y="118.5" width="309" height="68.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of Awesome Bronze Bags sold" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gN0-ul-TfG">
+                                                <rect key="frame" x="5.5" y="0.0" width="298" height="18.5"/>
+                                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bronzeBags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VW1-R8-sPO">
+                                                <rect key="frame" x="109" y="48.5" width="91" height="20"/>
+                                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="gN0-ul-TfG" firstAttribute="leading" secondItem="ENV-24-4gv" secondAttribute="leading" constant="5" id="pnm-eY-pEQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="gN0-ul-TfG" secondAttribute="trailing" constant="5" id="sUU-5R-CLy"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="sUU-5R-CLy"/>
+                                            </mask>
+                                        </variation>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ihV-MI-Y3x">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shopify" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="icW-dh-R1t">
+                                        <rect key="frame" x="116" y="16.5" width="88" height="28"/>
+                                        <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="24"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.36078431372549019" green="0.41568627450980389" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="icW-dh-R1t" firstAttribute="centerY" secondItem="ihV-MI-Y3x" secondAttribute="centerY" id="9zK-jN-atG"/>
+                                    <constraint firstItem="icW-dh-R1t" firstAttribute="centerX" secondItem="ihV-MI-Y3x" secondAttribute="centerX" id="VUt-Bl-ez2"/>
+                                    <constraint firstAttribute="height" constant="60" id="wuY-gc-khf"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="cwm-h1-aP7" secondAttribute="trailing" id="95c-hW-7RB"/>
-                            <constraint firstItem="cwm-h1-aP7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Y6I-Mn-xnL"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="cwm-h1-aP7" secondAttribute="bottom" id="uGl-mR-Mk4"/>
-                            <constraint firstItem="cwm-h1-aP7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xNd-iO-UE8"/>
+                            <constraint firstItem="8uT-0G-ofW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NcZ-ck-IM0"/>
+                            <constraint firstAttribute="trailing" secondItem="ihV-MI-Y3x" secondAttribute="trailing" id="Uae-Nv-4ld"/>
+                            <constraint firstItem="8uT-0G-ofW" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Z4r-Hx-XlR"/>
+                            <constraint firstItem="ihV-MI-Y3x" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bna-ea-2mv"/>
+                            <constraint firstItem="ihV-MI-Y3x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="prx-Tz-bTH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Customers" id="5li-qP-wHe"/>
                     <connections>
-                        <outlet property="customerTableView" destination="cwm-h1-aP7" id="gaz-yt-gOm"/>
+                        <outlet property="bronzeBagsLabel" destination="VW1-R8-sPO" id="GGk-Qi-0nn"/>
+                        <outlet property="totalPriceLabel" destination="uFg-HQ-gpU" id="ujW-9u-oeL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
